Fix kpis, fix collapse button

--- a/src/modules/ComboDashboard/components/HeaderToolbar/HeaderToolbar.scss
+++ b/src/modules/ComboDashboard/components/HeaderToolbar/HeaderToolbar.scss
@@ -2,7 +2,7 @@
     display: flex;
 
     .hBigSpacer {
-        width: 40px;
+        width: 35px;
     }
 
     .hExtraLargeSpacer {
@@ -18,6 +18,16 @@
         &:focus {
             outline: 0;
         }
+    }
+
+    .collapseButton {
+        position: absolute;
+        right: 25px;
+        &:focus {
+            outline: 0;
+        }
+        padding: 0;
+        background-color: white;
     }
 
     .status {
